fix: header on mobile

--- a/style/responsive.css
+++ b/style/responsive.css
@@ -4,6 +4,12 @@
     flex-direction: column;
   }
 
+  .button {
+    margin-top: 5px;
+    width: 190px;
+    height: 60px;
+  }
+
   .description {
     margin-bottom: 20px;
   }
